--- a/code/assets/style.css
+++ b/code/assets/style.css
@@ -1,3 +1,8 @@
+.super_aligner {
+  position: fixed;
+  z-index: 10;
+}
+
 html {
   scroll-behavior: smooth;
 }
@@ -9,6 +14,8 @@ body {
   font-weight: 500;
   line-height: 1.6;
   color: black;
+
+  overflow-x: hidden; /* Hide horizontal scrollbar */
 }
 
 *,
